@@ -1,7 +1,7 @@
 -------------------------------------------------------------------------------
   MUNGE Credential v1 Format
 -------------------------------------------------------------------------------
-  $Id: credential_v1_format.txt,v 1.1 2003/06/17 20:51:03 dun Exp $
+  $Id: credential_v1_format.txt,v 1.2 2003/09/18 21:09:26 dun Exp $
 -------------------------------------------------------------------------------
 
 
@@ -17,9 +17,10 @@
     | M | var : MAC (message authentication code)                    | M |
     +---+------------------------------------------------------------+---+
     |   | 64b : salt                                                 |   |
-    | I | 08b : length (in bytes) of the origin IP address           | I |
-    | N | var : origin IP address (where the credential was encoded) | N |
+    |   | 08b : length (in bytes) of the origin IP address           |   |
+    | I | var : origin IP address (where the credential was encoded) | I |
     | N | 32b : time at which the credential was encoded (time_t)    | N |
+    | N | 32b : time to live (in seconds) once encoded               | N |
     | E | 32b : UID of the process requesting the credential         | E |
     | R | 32b : GID of the process requesting the credential         | R |
     |   | 32b : length (in bytes) of payload data                    |   |
